fix: fix z-index in header

--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -14,7 +14,9 @@
   margin: 0 auto;
   max-width: 625px;
   background-color: var(--main-bg-color);
+  z-index: 1;
 }
+
 .navigation__links {
   display: flex;
   justify-content: space-between;
